<resources>
    <string name="app_name">Government property check</string>
    <string name="set_up_kiosk">Government property check system</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="submit">Submit</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logout">Log Out</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="powered_by_momenttrack">powered by momentTrack</string>
    <string name="Next">Next</string>


    // dilog text

    <string name="dialogue_body">This is dialogue body.newgbhwgbw gwejbwiegbiwe ehiwbitwbti</string>
    <string name="dialogue_text">ok</string>

</resources>