<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:background="@color/white"
  android:layout_height="match_parent"
  tools:context=".ui.MainActivity">
  <com.google.android.material.appbar.AppBarLayout
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:id="@+id/app_bar"
    android:background="@color/teal_700"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:contentInsetStart="0dp"
      android:contentInsetLeft="0dp"
      android:contentInsetEnd="0dp"
      android:contentInsetRight="0dp"
      android:paddingLeft="0dp"
      android:paddingEnd="0dp"
      android:visibility="visible"
      app:contentInsetEnd="0dp"
      app:contentInsetLeft="0dp"
      app:contentInsetRight="0dp"
      app:contentInsetStart="0dp">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:visibility="gone" />

      <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:text="@string/set_up_kiosk"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="14sp" />

    </androidx.appcompat.widget.Toolbar>
  </com.google.android.material.appbar.AppBarLayout>

  <com.google.android.material.textfield.TextInputEditText

    android:textColor="@color/teal_700"
    android:maxLength="50"
    android:lines="1"
    android:textColorHint="@color/teal_700"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="24dp"
    android:padding="12dp"
    android:background="@drawable/input_text_background"

    android:id="@+id/til_email"
    android:layout_width="match_parent"
    android:hint="@string/enter_e_mail"
    app:boxBackgroundMode="none"

    app:layout_constraintTop_toBottomOf="@+id/app_bar"
    android:layout_height="wrap_content"

    android:maxLines="1"

    android:inputType="textEmailAddress" />


  <com.google.android.material.textfield.TextInputEditText

    android:textColor="@color/teal_700"
    android:maxLength="30"
    android:lines="1"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="40dp"
    android:textColorHint="@color/teal_700"
    android:padding="12dp"
    android:background="@drawable/input_text_background"

    android:id="@+id/til_password"
    android:layout_width="match_parent"
    android:hint="@string/enter_password"
    app:layout_constraintTop_toBottomOf="@+id/til_email"
    android:layout_height="wrap_content"
    android:maxLines="1"
    android:inputType="textPassword" />


  <LinearLayout
    android:orientation="vertical"
    android:layout_marginTop="40dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:layout_constraintTop_toBottomOf="@+id/til_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatButton
      android:layout_width="match_parent"
      android:id="@+id/btn_submit"
      android:background="@drawable/button_background"
      android:textColor="@color/white"
      android:text="@string/submit"
      android:textSize="20dp"
      android:layout_height="wrap_content" />


    <TextView
      android:layout_width="match_parent"
      android:textColor="@color/black"
      android:gravity="center"
      android:layout_marginTop="10dp"
      android:text="If password doesn’t work so you need to assistance contact moment track."
      android:textSize="18dp"
      android:layout_height="wrap_content" />




  </LinearLayout>



  <androidx.appcompat.widget.AppCompatTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_android_black_24dp"
    android:drawablePadding="8dp"
    android:drawableTint="@color/teal_700"
    android:gravity="center"
    android:padding="8dp"
    android:text="@string/powered_by_momenttrack"
    android:textColor="@color/teal_700"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>