<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  tools:context=".ui.ChooseTimeSloActivity">

  <com.google.android.material.appbar.AppBarLayout
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:id="@+id/app_bar"
    android:background="@color/teal_700"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
      android:layout_width="match_parent"
      android:paddingLeft="0dp"
      android:contentInsetLeft="0dp"
      android:contentInsetStart="0dp"
      app:contentInsetLeft="0dp"
      app:contentInsetStart="0dp"
      android:contentInsetRight="0dp"
      android:contentInsetEnd="0dp"
      app:contentInsetRight="0dp"
      app:contentInsetEnd="0dp"
      android:paddingEnd="0dp"
      android:layout_height="wrap_content">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:visibility="gone" />

      <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:text="@string/set_up_kiosk"
        android:gravity="left"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />

    </androidx.appcompat.widget.Toolbar>
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.appcompat.widget.AppCompatSpinner
    android:layout_width="match_parent"
    android:id="@+id/acp_check_in"
    app:layout_constraintTop_toBottomOf="@+id/app_bar"
    android:layout_margin="20dp"
    android:background="@drawable/button_background"
    android:layout_height="50dp" />

  <androidx.appcompat.widget.AppCompatSpinner
    android:layout_width="match_parent"
    android:id="@+id/acp_check_out"
    app:layout_constraintTop_toBottomOf="@+id/acp_check_in"
    android:layout_margin="20dp"

    android:background="@drawable/button_background_blue"
    android:layout_height="50dp" />
  <androidx.appcompat.widget.AppCompatTextView
    android:layout_width="wrap_content"
    android:padding="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:gravity="center"
    android:textSize="18sp"
    android:drawablePadding="8dp"
    android:textAlignment="gravity"
    android:drawableTint="@color/teal_700"
    android:drawableTop="@drawable/ic_android_black_24dp"
    android:text="@string/powered_by_momenttrack"
    android:textColor="@color/teal_700"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_height="wrap_content" />
  <androidx.appcompat.widget.AppCompatButton
    android:layout_width="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="40dp"
    android:id="@+id/btn_submit"
    android:background="@drawable/button_background"
    android:textColor="@color/white"
    android:text="@string/Next"
    android:textSize="20dp"
    app:layout_constraintTop_toBottomOf="@+id/acp_check_out"
    android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>