<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/white"
    tools:context=".ui.QrScannerActivity">
    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:id="@+id/app_bar"
        android:background="@color/teal_700"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:paddingLeft="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            android:paddingEnd="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:padding="8dp"
                 android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:text="@string/set_up_kiosk"

                android:textSize="16sp"
                android:textAllCaps="true"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
         android:layout_marginTop="30dp"
        android:background="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/scanner_view"
        android:layout_width="match_parent"
         android:orientation="vertical"
         app:flow_verticalBias="0"
        app:layout_constraintBottom_toTopOf="@+id/tv_powered_by"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="16dp"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:id="@+id/tv_count"
            android:gravity="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/rc_data"
            app:layout_constraintTop_toBottomOf="@+id/tv_count"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="40dp"
            android:id="@+id/btn_submit"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:textSize="20dp"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_powered_by"
            app:layout_constraintTop_toBottomOf="@+id/rc_data"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            android:background="@drawable/button_background"
            android:text="@string/logout"
            android:textColor="@color/white"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_submit" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp"
         android:id="@+id/tv_powered_by"
        android:gravity="center"
        android:textSize="18sp"
        android:drawablePadding="8dp"
        android:text="@string/powered_by_momenttrack"
        android:drawableTint="@color/teal_700"
         android:layout_marginTop="16dp"
        android:drawableTop="@drawable/ic_android_black_24dp"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>