<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:background="@color/white"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ShowTimeSlotActivity">

    <com.google.android.material.appbar.AppBarLayout
      app:layout_constraintTop_toTopOf="parent"
      android:layout_width="match_parent"
      android:id="@+id/app_bar"
      android:background="@color/teal_700"
      android:layout_height="wrap_content">

      <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:paddingLeft="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        android:paddingEnd="0dp"
        android:layout_height="wrap_content">

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="8dp"
          android:id="@+id/iv_back"

          android:src="@drawable/ic_code_scanner_flash_off"
          tools:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="match_parent"
          android:text="@string/set_up_kiosk"
          android:textSize="14sp"
          android:textAllCaps="true"
          android:layout_marginStart="8dp"
          android:textColor="@color/white"
          android:layout_height="wrap_content" />

      </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
      android:layout_marginTop="24dp"
      android:layout_marginBottom="24dp"
      android:id="@+id/cv_check_in"
      app:cardCornerRadius="16dp"
      android:layout_marginRight="40dp"
      android:layout_marginLeft="40dp"
      android:elevation="5dp"
      app:cardBackgroundColor="#89CFF0"
      app:layout_constraintTop_toBottomOf="@+id/app_bar"
      android:layout_width="match_parent"
      android:layout_height="180dp">

      <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/ll_check_in"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="match_parent"
          android:padding="8dp"
          android:gravity="center"
          android:layout_gravity="center_horizontal"
          android:textSize="20sp"
          android:textColor="#000000"
          android:text="Check-in to"
          android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="match_parent"
          android:padding="8dp"
          android:id="@+id/tv_check_in"
          android:gravity="center"
          android:layout_gravity="center_horizontal"
          android:textSize="20sp"
          android:text="1:00"
          android:textColor="#000000"
          android:layout_height="wrap_content" />

      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:layout_marginTop="24dp"
      android:layout_marginBottom="24dp"
      android:id="@+id/cv_check_out"
      app:cardCornerRadius="16dp"
      android:padding="8dp"
      android:layout_marginRight="40dp"
      android:elevation="5dp"
      android:layout_marginLeft="40dp"
      app:cardBackgroundColor="#FFe300"
      app:layout_constraintTop_toBottomOf="@+id/cv_check_in"
      android:layout_width="match_parent"
      android:layout_height="180dp">

      <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="match_parent"
          android:padding="8dp"
          android:gravity="center_horizontal"
          android:layout_gravity="center_horizontal"
          android:textSize="20sp"
          android:text="Check-out of"
          android:textColor="#000000"
          android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="match_parent"
          android:padding="8dp"
          android:id="@+id/tv_check_out"
          android:gravity="center_horizontal"
          android:layout_gravity="center_horizontal"
          android:textSize="20sp"
          android:textColor="#000000"
          android:text="3:00"
          android:layout_height="wrap_content" />

      </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatSpinner
      android:layout_width="match_parent"
      android:id="@+id/acp_people"
      app:layout_constraintTop_toBottomOf="@+id/cv_check_out"
      android:layout_margin="20dp"
      android:visibility="gone"
      android:background="@drawable/button_background"
      android:layout_height="50dp" />


    <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:id="@+id/ll_scanner"
      android:orientation="vertical"
      app:layout_constraintTop_toBottomOf="@+id/cv_check_out"
      android:layout_height="wrap_content">


      <TextView
        android:id="@+id/tv_Scanner_txt"
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="Please scan person QR code"
        android:visibility="gone"
        android:textSize="20dp"
        android:layout_height="wrap_content" />

      <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="300dp" />


      <TextView
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:id="@+id/usr_scanned"
        android:padding="8dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@Username"
        android:visibility="gone"
        android:textSize="20dp"
        android:layout_height="wrap_content" />


      <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        android:id="@+id/btn_submit"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:text="@string/next"
        android:visibility="gone"
        android:textSize="20dp"
        android:layout_height="wrap_content" />

      <Button
        android:id="@+id/log_out"
        android:layout_width="@dimen/logout_width"
        android:layout_height="@dimen/logout_height"
        android:background="@drawable/button_background"
        android:text="@string/logout"
        android:layout_marginBottom="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_submit" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/appCompatTextView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableTop="@drawable/ic_android_black_24dp"
      android:drawablePadding="8dp"
      android:drawableTint="@color/teal_700"
      android:gravity="center"
      android:padding="8dp"
      android:text="@string/powered_by_momenttrack"
      android:textColor="@color/teal_700"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>